<resources>
    <string name="app_name">掌上化药</string>

    <!-- Strings related to login -->
    <string name="prompt_id">学号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="ed_yzm">验证码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="text_name_left">姓名：</string>
    <string name="text_xuehao_left">学号：</string>
    <string name="text_banji_left">班级：</string>
    <string name="text_zhuanye_left">专业：</string>
    <string name="text_yuanxi_left">院系：</string>
</resources>
