<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:stv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.allen.library.SuperTextView
            android:id="@+id/super_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            app:sCenterTextSize="@dimen/text_size"
            app:sCenterTextString=""
            app:sLeftMaxEms="100"
            app:sLeftTextSize="@dimen/text_size"
            stv:sLeftTextString="@string/text_name_left" />

        <com.allen.library.SuperTextView
            android:id="@+id/super_xuehao"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            app:sCenterTextSize="@dimen/text_size"
            app:sCenterTextString=""
            app:sLeftMaxEms="100"
            app:sLeftTextSize="@dimen/text_size"
            stv:sLeftTextString="@string/text_xuehao_left" />

        <com.allen.library.SuperTextView
            android:id="@+id/super_banji"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            app:sCenterTextSize="@dimen/text_size"
            app:sCenterTextString=""
            app:sLeftMaxEms="100"
            app:sLeftTextSize="@dimen/text_size"
            stv:sLeftTextString="@string/text_banji_left" />

        <com.allen.library.SuperTextView
            android:id="@+id/super_zhuanye"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            app:sCenterTextSize="@dimen/text_size"
            app:sCenterTextString=""
            app:sLeftMaxEms="100"
            app:sLeftTextSize="@dimen/text_size"
            stv:sLeftTextString="@string/text_zhuanye_left" />

        <com.allen.library.SuperTextView
            android:id="@+id/super_yuanxiao"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            app:sCenterTextSize="@dimen/text_size"
            app:sCenterTextString=""
            app:sLeftMaxEms="100"
            app:sLeftTextSize="@dimen/text_size"
            stv:sLeftTextString="@string/text_yuanxi_left"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/post_res_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="15dp"
            android:background="@drawable/button_selector"
            android:text="成绩查询"
            android:textColor="@color/color_white"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>